# bide

./: .gitignore  Cargo.toml  README.md  bide.example.toml  justfile
docs/: architecture.md
src/: board.rs  detect.rs  dispatch.rs  doctor.rs  exec.rs  lib.rs  main.rs  route.rs
src/agents/: agent_step.rs  anthropic.rs  claude_code.rs  http.rs  mod.rs  openai.rs  protocol.rs
src/cli/: mod.rs
src/config/: agent.rs  error.rs  init.rs  mod.rs  policy.rs  schema.rs  tools.rs
src/context/: claude.rs  lexis.rs  mod.rs
src/core/: engine.rs  mod.rs  state.rs  task.rs  workflow.rs
src/git/: mod.rs
src/policy/: command.rs  mod.rs  secret.rs
src/report/: mod.rs
src/tools/: command_step.rs  implement.rs  mod.rs  process.rs
src/tui/: bridge.rs  mod.rs  render.rs
tests/: tdd_agent_runner.rs  tdd_blackboard.rs  tdd_claude_code_driver.rs  tdd_cli.rs  tdd_command_step.rs  tdd_config.rs  tdd_context_builder.rs  tdd_detect.rs  tdd_dispatcher.rs  tdd_doctor.rs  tdd_exec.rs  tdd_git_manager.rs  tdd_implement_step.rs  tdd_init.rs  tdd_interactive.rs  tdd_observer.rs  tdd_policy_engine.rs  tdd_render.rs  tdd_report.rs  tdd_route.rs  tdd_state_machine.rs  tdd_tool_router.rs  tdd_tui.rs  tdd_workflow_engine.rs
