[package]
name = "bide"
version = "0.0.1"
description = "Deterministic workflow engine that consults specialized agents when it needs judgement"
edition = "2021"

[lib]
name = "bide"
path = "src/lib.rs"

[[bin]]
name = "bide"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
wait-timeout = "0.2"
